# yqr

./: .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.agent/: settings.json
.agent/commands/: codereview.md
.agent/hooks/: notify-sound.sh
.agent/skills/benchmark/: SKILL.md
.agent/skills/cargo-doc/: SKILL.md
.agent/skills/cargo-quality/: SKILL.md
.agent/skills/dep-upgrade/: SKILL.md
.agent/skills/e2e-perf/: SKILL.md
.agent/skills/local-bench/: SKILL.md
.agent/skills/parity-test/: SKILL.md
.agent/skills/pr-prepare/: SKILL.md
.agent/skills/security-audit/: SKILL.md
.agent/skills/shortcode-test/: SKILL.md
.agent/skills/worktree-create/: SKILL.md
.agent/skills/worktree-list/: SKILL.md
.agent/skills/worktree-remove/: SKILL.md
.agent/skills/worktree-sync/: SKILL.md
.github/scripts/: local-ci.sh
.github/workflows/: benchmark.yml  ci.yml
benches/: eval.rs
specs/architecture/: yqr-a001-fidelity-surgical-edit.md
specs/bugs/: yqr-b000-bug-status.md  yqr-b001-roundtrip-discards-whitespace-and-formatting.md
specs/features/: 0001-yaml-jq-clone.md  yqr.f001-yaml-jq-clone.md  yqr.f001-yaml-jq-m0.md
specs/research/: yqr-r001-jq-feature-gap.md  yqr-r002-noyalib-fidelity-evaluation.md
src/: ast.rs  cli.rs  error.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs
tests/: cli.rs  fidelity.rs  integration.rs
