[package]
name = "yqr"
version = "0.1.1"
edition = "2024"
rust-version = "1.96"
description = "A jq-style command-line processor for YAML"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zoosky/yqr"
readme = "README.md"
keywords = ["yaml", "jq", "cli", "query", "filter"]
categories = ["command-line-utilities", "parsing"]
# Dev-only files kept out of the published crate.
exclude = [".agent/", ".github/", "specs/", "AGENT.md"]

[[bin]]
name = "yqr"
path = "src/main.rs"

[lib]
name = "yqr"
path = "src/lib.rs"

[[bench]]
name = "eval"
harness = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rust-yaml = "1.1.0"
# Test-only comparison backend for the fidelity harness (tests/fidelity.rs).
# Optional and off by default (enabled via the `backend-noyalib` feature), so it
# is never built in a normal/published build. Experimental: see research r002.
noyalib = { version = "0.0.8", optional = true }

[dev-dependencies]
criterion = "0.8.2"
# The fidelity harness drives rust-yaml's load/dump path directly. Integration
# tests compile as a separate crate and do not inherit the library's normal
# dependencies, so rust-yaml is declared here as well.
rust-yaml = "1.1.0"

[features]
# Adds the noyalib CST backend to the fidelity harness. Off by default.
backend-noyalib = ["dep:noyalib"]

[profile.release]
lto = "thin"
strip = true
